--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
-{
+{ 
   "name": "floodanalyticsapp",
+  "homepage":"http://localhost:3000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,6 +24,7 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5"
   },
+  "proxy": "http://localhost:8080/analytics",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
