--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
-{ 
+{
   "name": "floodanalyticsapp",
-  "homepage":"http://localhost:3000",
+  "homepage": "http://localhost:3000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,6 +19,7 @@
     "react-dom": "^16.12.0",
     "react-iframe": "^1.8.0",
     "react-load-script": "0.0.6",
+    "react-loading-overlay": "^1.0.1",
     "react-plotly.js": "^2.4.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
