added route for getting conservation authority record counts

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /.pnp
 .pnp.js
 apitest.js
+conservation-layers.json
+conservation-authority-info.js
 webform-expressapp/views/mapiframe/conservation-layers.json
 # testing
 /coverage
