added create heatmap button with no functionality for each category

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ apitest.js
 conservation-layers.json
 conservation-authority-info.js
 webform-expressapp/views/mapiframe/conservation-layers.json
+/retired
 # testing
 /coverage
 
