Added show records feature for each conservation authority

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ webform-expressapp/views/mapiframe/conservation-layers.json
 /.vscode
 # testing
 /coverage
-
+id_rsa_workgithub
+id_rsa_workgithub.pub
 # production
 /build
 
