Fixed package.json properties for production build

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "floodanalyticsapp",
-  "homepage": "http://localhost:3000",
+  "homepage": "http://localhost:8080/analytics",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,7 +27,7 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5"
   },
-  "proxy": "http://localhost:8080/analytics",
+  "proxy": "",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
