setup development proxy

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5"
   },
-  "proxy": "",
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
