--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 apitest.js
 conservation-authority-info.js
 webform-expressapp/views/mapiframe/conservation-layers.json
-config-dv.json
+config-dev.json
 /retired
 /.vscode
 # testing
