--- a/config.docker.json
+++ b/config.docker.json
@@ -3,7 +3,7 @@
         "user": "floodmapping_admin", 
         "host": "db", 
         "database": "floodmapping_dev", 
-        "password": "floodmappingadm4dev", 
+        "password": "", 
         "port": 5432
     },
 
